Minor fix in truncating gallery card tags

--- a/public/javascripts/Gallery/css/tags.css
+++ b/public/javascripts/Gallery/css/tags.css
@@ -8,6 +8,9 @@
     font-weight: bold;
     padding: 1px 5px;
     color: #2d2a3f;
+}
+
+.card-tags .thumbnail-tag {
     flex: 1;
 }
 
